glib: Add poppler_page_find_text_with_options

To be able to search text with options like case sensitive, search
backwards and whole words only.

https://bugs.freedesktop.org/show_bug.cgi?id=2951